fix: Change SalesPlugin to be a LL TemplatePlugin and use the common pulse thread while restricting the pulses to Chat

--- a/SalesTracker.csproj
+++ b/SalesTracker.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -91,6 +92,12 @@
     <None Include="Properties\DataSources\Logger.datasource" />
     <None Include="Properties\DataSources\Sale.datasource" />
     <None Include="Properties\DataSources\SettingsForm.datasource" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Quest Behaviors\__LlamaLibrary\LlamaLibrary.csproj">
+      <Project>{196ee308-0205-4cc4-b449-51064f7e9960}</Project>
+      <Name>LlamaLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
